@@ -61,6 +61,7 @@ v2.0:
 
 v2.1:
 - class ExceptionBase:
+  - now directly derives from exception
   - added method prependMsg()
 - class CmdlParser
   - added supervisors
